--- a/sass/main.sass
+++ b/sass/main.sass
@@ -12,9 +12,11 @@
 
 @import './components/header'
 
-@import './components/navigation'
+@import './components/header-navigation'
 
-@import './components/contact'
+@import './components/header-contact'
+
+@import './components/mobile-menu'
 
 @import './components/hero'
 
