--- a/sass/portfolio.sass
+++ b/sass/portfolio.sass
@@ -10,12 +10,14 @@
 
 @import './components/header'
 
-@import './components/navigation'
+@import './components/header-navigation'
 
-@import './components/contact'
+@import './components/header-contact'
+
+@import './components/mobile-menu'
+
+@import './components/button-portfolio'
 
 @import './components/slot-cart'
 
 @import './components/footer'
-
-@import './components/footer-portfolio'
