--- a/sass/components/_client.scss
+++ b/sass/components/_client.scss
@@ -1,33 +1,28 @@
 .customer__heading {
-	width: 314px;
-	height: 33px;
-	font-weight: 700px;
+	font-weight: 700;
 	font-size: 28px;
 	line-height: 33px;
 	text-align: center;
 	color: $black-text;
 	margin-top: 60px;
+	margin-bottom: 30px;
+
+	@media screen and (min-width: 1200px) {
+		font-size: 36px;
+		line-height: 42px;
+	}
 }
 
 .customer__list {
 	display: flex;
 	flex-wrap: wrap;
-	flex-basis: calc((100% - 60px) /3);
-	padding-top: 30px;
+	justify-content: center;
+	margin: -15px;
 	margin-bottom: 60px;
-
-	@media screen and (min-width: 768px) {
-		flex-basis: calc((100% - 60px) /2);
-	}
-
-	@media screen and (min-width: 1200px) {
-		justify-content: space-between;
-		padding-top: 50px;
-		padding-bottom: 80px;
-	}
 }
 
 .customer__logo {
+	flex-basis: calc((100% - 2 * 30px) /2);
 	fill: $baskground-social-link;
 	width: 210px;
 	height: 92px;
@@ -38,18 +33,37 @@
 	border 250ms $cubik,
 	border-radius 250ms $cubik;
 	margin-bottom: 30px;
-	margin-right: 30px;
-
-	&:nth-child(2n+2) {margin-right: 0px;}
 
 	&:hover { fill: $blue-logo; border: 1px solid $blue-logo; border-radius: 4px;}
 
-	@media screen and (min-width: 768px) {
+	@media screen and (min-width: 768px) and (max-width: 1199px) {
 		width: 226px;
+		flex-basis: calc((100% - 90px) /3);
+		margin-right: 30px;
+
+		&:nth-child(3n) {margin-right: 0px;}
 	}
 
 	@media screen and (min-width: 1200px) {
 		width: 170px;
+		flex-basis: 0%;
+		margin-right: 30px;
+
+		&:last-child {
+			margin-right: 0px;
+		}
+
+		//&:nth-child(3n) {
+		//	margin-right: 30px;
+		//}
+	}
+}
+
+@media  screen and (min-width: 480px) and (max-width: 767px) {
+	.customer__logo {
+	margin-right: 30px;
+
+	&:nth-child(2n) {margin-right: 0px;}
 	}
 }
 
@@ -66,7 +80,7 @@
 .customer__icon-5 { width: 59px; height: 47px;}
 
 .customer__icon-6 { width: 88.48px; height: 45.44px;}
-
+//----------------------------------------------------------
 //.customer__heading {
 //  font-weight: 700px;
 //  font-size: 36px;
