--- a/sass/components/_hero.scss
+++ b/sass/components/_hero.scss
@@ -1,19 +1,44 @@
 .main__container { 
-	width: 480px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	justify-content: center;
 	height: 400px;
-	margin-left: auto;
-	margin-right: auto;
-	background-image: url(../images/Img.svg);
+	text-align: center;
+	background-image: url(../images/Header_mob1x.jpg);
 	background-color: $background-head;
+	background-position: center;
+	background-repeat: no-repeat;
+	background-size: cover;
+
+	@media (min-device-pixel-ratio: 2), (min-resolution:192dpi), (min-resolution: 2dppx) {
+		background-image: url(../images/Header_mob@2x.jpg);
+	}
 
 	@media screen and (min-width: 768px) {
-		width: 768px;
+		background-image: url(../images/Header_tab1x.jpg);
+
+		@media (min-device-pixel-ratio: 2), (min-resolution:192dpi), (min-resolution: 2dppx) {
+		background-image: url(../images/Header_tab@2x.jpg);}
 	}
 
-	@media  screen and (min-width: 1200px) {
-		width: 100%;
+	@media screen and (min-width: 480px) {
+		display: block;
+		padding-top: 118px;
+		padding-bottom: 118px;
+		height: auto;
 	}
 
+	@media screen and (min-width: 1200px) {
+		max-width: 1600px;
+		padding-top: 200px;
+		padding-bottom: 200px;
+		background-image: url(../images/Header_pc1x.jpg);
+
+		@media (min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
+			background-image: url(../images/Header_pc@2x.jpg);
+		}
+	}
 }
 
 .main__heading {
@@ -35,17 +60,39 @@
 }
 
 .main__key,
-.main__button { display: block; width: 200px; height: 50px; justify-content: center; text-align: center; margin: auto; border-radius: 4px;}
+.main__button {
+	display: block;
+	width: 200px;
+	height: 50px;
+	justify-content: center;
+	text-align: center;
+	margin: auto;
+	border-radius: 4px;
 
-.main__button { font-weight: 700; font-style: normal; font-size: 16px; line-height: 30px; letter-spacing: 0.06em; align-items: center; color: $white-text; background-color: $background-btn; border-radius: 4px; transform: background-color 250ms $cubik;
-
-	&:hover,&:focus { border-radius: 4px solid $blue-btn; box-shadow: 0px 4px 4px 0px rgba (0, 0, 0, 0.15); transition: background-color 250ms $cubik;}
+	&:hover, &:focus {
+		border-radius: 4px solid $blue-btn;
+		box-shadow: 0px 4px 4px 0px rgba (0, 0, 0, 0.15);
+		transition: background-color 250ms $cubik;
+	}
 }
 
-.main__key:hover,
-.main__key:focus,{ border-radius: 4px solid var(--blue-btn); box-shadow: 0px 4px 4px 0px rgba (0, 0, 0, 0.15); transition: background-color 250ms $cubik;}
+.main__button {
+	font-weight: 700;
+	font-style: normal;
+	font-size: 16px;
+	line-height: 30px;
+	letter-spacing: 0.06em;
+	align-items: center;
+	color: $white-text;
+	background-color: $background-btn;
+	border-radius: 4px;
+	transform: background-color 250ms $cubik;
+}
 
 
+//.icon_fon
+//.icon__fon-img
+//-------------------------------------
 
 //.main__container { width: 100%; height: 600px; margin-left: auto; margin-right: auto; background-image: url(../images/Img.svg); background-color: $background-head;}
   
