--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -1,10 +1,14 @@
+//hover modal icon close!!!!
+//position center modalwindow!!!
+
 .main__backdrop {
-  display: none;
-  position: fixed;
+  //display: none;
+  //position: fixed;
+  position:absolute;
   top: 0;
   left: 0;
   width: 100%;
-  height: 100%;
+  height: 796px;
   background-color: rgba(0, 0, 0, 0.2);
 
   &.is-hidden {
@@ -18,13 +22,19 @@
   display: flex;
   top: 50%;
   left: 50%;
-  min-width: 528px;
-  min-height: 581px;
+  min-width: 450px;
+  min-height: 609px;
   background-color: $white-text;
   border-radius: 4px;
   box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
-    0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+  0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+  0px 1px 3px 0px rgba(0, 0, 0, 0.12);
   transform: translate(-50%, -50%);
+
+  @media screen and (min-width: 1200px) {
+	min-width: 528px;
+	min-height: 581px;
+  }
 }
 
 .modal__icon-close {
@@ -49,28 +59,46 @@
 
 .modal__form {
   display: inline-block;
-  margin-top: 40px;
-  width: 448px;
-  margin: 40px;
+  width: 370px;
+  padding-top: 12px;
+  padding-left: 40px;
+  padding-right: 40px;
+
+  @media screen and (min-width: 1200px) {
+	width: 448px;
+  }
 }
 
 .modal__heading {
-  width: 100%;
-  height: 23px;
+  width: 370px;
+  height: 60px;
+  margin-top: 40px;
   font-style: normal;
   font-weight: 700;
   font-size: 20px;
-  line-height: 23px;
+  line-height: 30px;
+  letter-spacing: 0.03em;
   justify-content: center;
   text-align: center;
   color: $black-text;
+
+  @media screen and (min-width: 1200px) {
+    width: 450px;
+    height: 23px;
+    line-height: 23px;
+    margin-bottom: 12px;
+  }
 }
 
 .modal__input {
   display: inline-block;
-  width: 448px;
+  width: 370px;
   justify-content: center;
   margin-top: 12px;
+
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
 }
 
 .modal__name {
@@ -139,9 +167,12 @@
   display: inline-block;
   justify-content: center;
   text-align: center;
-  width: 100%;
+  width: 370px;
   margin-top: 20px;
-  margin-bottom: 30px;
+
+  @media screen and (min-width: 1200px) {
+    width: 448px;
+  }
 }
 
 .modal__contract {
@@ -164,6 +195,13 @@
   justify-content: center;
   align-items: center;
   text-align: center;
+  width: 370px;
+  margin-top: 30px;
+  margin-bottom: 40px;
+
+  @media screen and (min-width: 1200px) {
+    width: 450px;
+  }
 }
 
 .modal__button {
