--- a/sass/components/_text.scss
+++ b/sass/components/_text.scss
@@ -1,29 +1,47 @@
-.section__text { margin-top: 60px; margin-bottom: 60px;}
+.section__text {
+	margin-top: 60px;
+	margin-bottom: 60px;
+
+	@media screen  and (min-width: 768px) {
+		display: flex;
+		flex-wrap: wrap;
+	}
+
+	@media screen  and (min-width: 1200px) {
+		display: flex;
+	}
+}
 
 .section__element { 
 	width: 450px;
 	margin-bottom: 30px;
 
+	&:not(:first-child) {
+		margin-bottom: 30px;
+	}
 
-	&:not(:first-child) { margin-bottom: 30px;}
-
-	@media screen and (min-width: 768px) {
-		display: flex;
-		flex-wrap: wrap;
-		flex-basis: calc((100% - 30px) /2);
+	@media screen and (min-width: 768px) and (max-width: 1199px) {
 		width: 354px;
+		flex-basis: calc((100% - 60px) /2);
+		margin-right: 30px;
+
+		&:nth-child(2n) {
+			margin-right: 0px;
+		}
 	}
 
 	@media screen and (min-width: 1200px) {
-		display: flex;
-		justify-content: space-between;
 		width: 270px;
+		margin-right: 30px;
 
-		&:not(:first-child) { margin-left: 30px;}
+		&:last-child {
+			margin-right: 0px;
+		}
 	}
 }
 
 .text__heading { 
+	text-align: center;
 	color: $black-text;
 	font-weight: 700;
 	font-style: normal;
@@ -32,17 +50,28 @@
 	letter-spacing: 0.03em;
 	margin-bottom: 10px;
 
-	@media screen and (min-width: 480px) {
-		text-align: center;
+	@media screen and (min-width: 768px) {
+		text-align: left;
 	}
 }
 
-.text__paragraph { color: $greey; font-weight: 400; font-style: normal; font-size: 14px; line-height: 24px; letter-spacing: 0.03em;}
+.text__paragraph {
+	color: $greey;
+	font-weight: 400;
+	font-style: normal;
+	font-size: 14px;
+	line-height: 24px;
+	letter-spacing: 0.03em;
+}
   
 .icon__antenna,
 .icon__clock,
 .icon__diagram,
-.icon__astronaut { content: ''; width: 70px; height: 70px;}
+.icon__astronaut { 
+	content: '';
+	width: 70px;
+	height: 70px;
+}
   
 .section__icon { 
 	height: 120px;
@@ -54,7 +83,7 @@
 	margin-bottom: 30px;
 }
 
-
+//-----------------------------------
 //.section__text { display: flex; margin-top: 90px; margin-bottom: 94px;}
   
 //.section__element { flex-wrap: wrap; justify-content: space-between;
